# chimefrb-selection

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  pyproject.toml  readthedocs.yaml  setup.py
chimefrb_selection/: __init__.py  funcs.py  knn_mask.py  reweighting.py  selection.py  utils.py
chimefrb_selection/data/fits/1d_selection_function/dm/: IRLS_output_dm_order3_snr12_sl5.0.npz  model_comparison_dm_snr12_sl5.0.csv  summary_dm_order3_snr12_sl5.0.csv
chimefrb_selection/data/fits/1d_selection_function/fluence/: IRLS_output_fluence_order3_snr12_sl5.0.npz  summary_fluence_order3_snr12_sl5.0.csv
chimefrb_selection/data/fits/1d_selection_function/scattering_time/: IRLS_output_scattering_time_order3_snr12_sl5.0.npz  model_comparison_scattering_time_snr12_sl5.0.csv  summary_scattering_time_order3_snr12_sl5.0.csv
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst  usage.rst
examples/: fitting.ipynb  model-selection.ipynb  quickstart.ipynb  scattering-validation.ipynb  scattering-validation_updated (1).ipynb
fitting/: logistic_regression_cli.py  run_all_1d.sh  run_all_combinations_2d.sh  run_all_combinations_3d.sh  run_all_orders_4d.sh
plots/sanity_checks/beta_scan_ad/: beta_scan_scores.json
scripts/: build_downturn_cache.py  fluence_dm_selection_plot.py  fluence_scattering_matrix_plot.py  model_selection.py  plot_cached_pool_shapes.py  sbi_beta_posterior.py  sbi_beta_posterior_plot.py  sbi_three_param.py  sbi_two_param.py  sbi_two_param_diagnostics.py  scattering_dm_selection_plot.py
tests/: test_vectorized.py
(+121 files in other folders)
